WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72389
[Qt][WK2][Mac] MiniBrowser cannot create socketpair.
https://bugs.webkit.org/show_bug.cgi?id=72389
Summary
[Qt][WK2][Mac] MiniBrowser cannot create socketpair.
Zeno Albisser
Reported
2011-11-15 08:33:51 PST
Creation of socket failed with errno: 43 This is due to using AF_UNIX and SOCK_SEQPACKET in socketpair. This is fine for Linux, but seems not to be implemented on mac. We should simply go back to using SOCK_DGRAM for mac.
Attachments
patch for review.
(1.10 KB, patch)
2011-11-15 09:24 PST
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2011-11-15 09:24:25 PST
Created
attachment 115178
[details]
patch for review.
Zeno Albisser
Comment 2
2011-11-16 02:40:05 PST
we should consider replacing our IPC mechanisms with the webkit2 ones from the mac port. i will see if this is doable, and come up with a patch for that.
Zeno Albisser
Comment 3
2011-11-16 05:48:12 PST
Comment on
attachment 115178
[details]
patch for review. lets have this as an intermediate fix for the mac platform. Nevertheless I will be glad to look into a longterm solution of course. :)
Zeno Albisser
Comment 4
2011-11-16 06:56:22 PST
Comment on
attachment 115178
[details]
patch for review. Clearing flags on attachment: 115178 Committed
r100445
: <
http://trac.webkit.org/changeset/100445
>
Zeno Albisser
Comment 5
2011-11-16 06:56:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug