[Qt][WK2][Mac] MiniBrowser cannot create socketpair. https://bugs.webkit.org/show_bug.cgi?id=72389

Use SOCK_DGRAM on mac instead of SOCK_SEQPACKET.

Reviewed by Tor Arne Vestbø.

* UIProcess/Launcher/qt/ProcessLauncherQt.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@100445 bbb929c8-8fbe-4397-9dbb-9b2b20218538